Simplified code and updated it maturity.